sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:20: error: '<-' expected but ')' found.
      for(j<getNombreValeurs()-2 to 0 by -1)
                                           ^AlgCocktailSort1:29: error: illegal start of simple expression
  }
  ^