sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  
  var test=false;
  
  while(!test)
  {
    test=false;
    
     for(i<-0 to getNombreValeurs()-2)
      {
        if(plusPetit(i+1,i))
        {
          echange(i+1,i);
          test=true;
        }

      }

      for(j<getNombreValeurs()-2 to 0 by -1)
      {
         if(plusPetit(i+1,i))
        {
          echange(i+1,i);
          test=true;
        }

      }
  }
 
}